third_party/rust/chromium_crates_io/vendor/cxx-1.0.121/tests/ui/ptr_in_fnptr.stderr
error: pointer argument requires that the function pointer be marked unsafe
 --> tests/ui/ptr_in_fnptr.rs:4:27
  |
4 |         fn f(callback: fn(p: *const u8));
  |                           ^^^^^^^^^^^^
